@@ -2,11 +2,11 @@ package com.mycompany.bibliotecamagica;
 
 import com.mycompany.bibliotecamagica.Arboles.Biblioteca;
 import com.mycompany.bibliotecamagica.Arboles.Libro;
-
 import com.mycompany.bibliotecamagica.EstructurasBasicas.Grafo;
-
+import com.mycompany.bibliotecamagica.EstructurasBasicas.HashTableISBN;
 import java.io.*;
 import java.util.*;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class CargaArchivo {
@@ -34,15 +34,16 @@ public class CargaArchivo {
             while ((linea = br.readLine()) != null) {
                 n++;
                 if (primera) {
-                    primera = false; // Ignorar encabezado
+                    primera = false;
                     continue;
                 }
-                linea = linea.replace("\"", "").trim();
+
+                linea = linea.trim();
                 if (linea.isBlank()) {
                     continue;
                 }
 
-                String[] p = linea.split(",");
+                String[] p = parseCSVLine(linea);
                 if (p.length < 6) {
                     errores.add("Línea " + n + " inválida (bibliotecas): " + linea);
                     continue;
@@ -56,8 +57,8 @@ public class CargaArchivo {
                     int tiempoTraspaso = Integer.parseInt(p[4].trim());
                     int intervalo = Integer.parseInt(p[5].trim());
 
-                    Biblioteca bibliotecaa = new Biblioteca(id, nombre, ubicacion, tiempoIngreso, tiempoTraspaso, intervalo);
-                    bibliotecas.add(bibliotecaa);
+                    Biblioteca biblio = new Biblioteca(id, nombre, ubicacion, tiempoIngreso, tiempoTraspaso, intervalo);
+                    bibliotecas.add(biblio);
                     grafo.agregarBiblioteca(id);
                 } catch (Exception ex) {
                     errores.add("Línea " + n + " inválida (valores): " + linea);
@@ -70,7 +71,9 @@ public class CargaArchivo {
         return bibliotecas;
     }
 
-    public int cargarLibros(String ruta, Map<String, Biblioteca> porId, List<String> errores) {
+    public int cargarLibros(String ruta, Map<String, Biblioteca> bibliotecas,
+            Grafo grafo, SimuladorCompleto simulador, List<String> errores) {
+
         File archivo = new File(ruta);
         if (!archivo.exists()) {
             errores.add("No existe el archivo de libros: " + ruta);
@@ -78,7 +81,11 @@ public class CargaArchivo {
         }
 
         int ok = 0;
-        try (BufferedReader br = new BufferedReader(new FileReader(archivo))) {
+        boolean hilosIniciados = false; 
+
+        try (BufferedReader br = new BufferedReader(
+                new InputStreamReader(new FileInputStream(archivo), java.nio.charset.StandardCharsets.UTF_8))) {
+
             String linea;
             boolean primera = true;
             int n = 0;
@@ -89,59 +96,93 @@ public class CargaArchivo {
                     primera = false;
                     continue;
                 }
-
-                linea = linea.replace("\"", "").trim();
-                if (linea.isBlank()) {
+                if (linea.trim().isEmpty()) {
                     continue;
                 }
 
-                String[] p = linea.split(",");
-                if (p.length < 6) {
-                    errores.add("Línea " + n + " inválida (libros): " + linea);
+                String[] p = linea.split(",(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)", -1);
+                for (int i = 0; i < p.length; i++) {
+                    p[i] = p[i].replace("\"", "").trim();
+                }
+
+                if (p.length < 9) {
+                    errores.add("Línea " + n + " inválida (se esperaban 9 campos, encontrados " + p.length + "): " + linea);
                     continue;
                 }
 
                 try {
-                    String titulo = p[0].trim();
-                    String autor = p[1].trim();
-                    String isbn = p[2].trim();
-                    int anio = Integer.parseInt(p[3].trim());
-                    String genero = p[4].trim();
-                    String idBiblioteca = p[5].trim();
+                    String titulo = p[0];
+                    String isbn = p[1];
+                    String genero = p[2];
+                    String anioStr = p[3];
+                    String autor = p[4];
+                    String estado = p[5];
+                    String idBiblioteca = p[6];
+                    String destino = p[7];
+                    String prioridad = p[8];
 
-                    if (!Pattern.matches(".*\\S.*", titulo) || !Pattern.matches(".*\\S.*", autor)) {
-                        errores.add("Línea " + n + " inválida (titulo/autor vacíos)");
+                    int anio;
+                    try {
+                        anio = Integer.parseInt(anioStr.replaceAll("[^0-9]", ""));
+                    } catch (Exception e) {
+                        errores.add("Línea " + n + ": año inválido (" + anioStr + ")");
+                        continue;
+                    }
+
+                    Biblioteca b = bibliotecas.get(idBiblioteca);
+                    if (b == null) {
+                        errores.add("Línea " + n + ": biblioteca no encontrada (" + idBiblioteca + ")");
                         continue;
                     }
 
                     Libro libro = new Libro(titulo, autor, isbn, anio, genero);
+                    libro.setEstado(estado);
 
-                    String clave = claveColeccion(libro);
-                    isbnPorColeccion.putIfAbsent(isbn, new HashSet<>());
-                    Set<String> colecciones = isbnPorColeccion.get(isbn);
-                    if (!colecciones.isEmpty() && !colecciones.contains(clave)) {
-                        errores.add("ISBN en colección distinta (bloqueado) en línea " + n + ": " + isbn);
-                        continue;
-                    }
-                    colecciones.add(clave);
+                    String clave = (titulo + "|" + autor).toLowerCase();
+                    Set<String> set = isbnPorColeccion.computeIfAbsent(clave, k -> new HashSet<>());
 
-                    Biblioteca b = porId.get(idBiblioteca);
-                    if (b == null) {
-                        errores.add("Biblioteca destino no existe (línea " + n + "): " + idBiblioteca);
+                    boolean isbnEnOtraColeccion = isbnPorColeccion.entrySet().stream()
+                            .anyMatch(e -> !e.getKey().equals(clave) && e.getValue().contains(isbn));
+
+                    if (isbnEnOtraColeccion) {
+                        errores.add("Línea " + n + ": ISBN " + isbn + " ya existe en otra colección");
                         continue;
                     }
 
+                    set.add(isbn);
                     b.insertarLibro(libro);
+
+                    if (simulador != null) {
+                        simulador.getHash().insertar(isbn, libro);
+                    }
+
+                    if (estado.equalsIgnoreCase("En tránsito") && grafo != null && simulador != null) {
+                        simulador.transferirLibro(idBiblioteca, destino, libro,
+                                prioridad.equalsIgnoreCase("tiempo"));
+
+                       
+                        if (!hilosIniciados) {
+                            simulador.iniciarHilos();
+                            hilosIniciados = true;
+                            System.out.println(">>> Simulación iniciada automáticamente por libros en tránsito <<<");
+                        }
+                    }
+
                     ok++;
+
                 } catch (Exception ex) {
-                    errores.add("Línea " + n + " inválida (valores): " + linea);
+                    errores.add("Línea " + n + " inválida: " + linea + " (" + ex.getMessage() + ")");
                 }
             }
         } catch (IOException e) {
-            errores.add("Error leyendo libros: " + e.getMessage());
+            errores.add("Error leyendo archivo: " + e.getMessage());
         }
 
         return ok;
+    }
+
+    public int cargarLibros(String ruta, Map<String, Biblioteca> bibliotecas, List<String> errores) {
+        return cargarLibros(ruta, bibliotecas, null, null, errores);
     }
 
     public int cargarConexiones(String ruta, Grafo grafo, List<String> errores) {
@@ -164,13 +205,13 @@ public class CargaArchivo {
                     continue;
                 }
 
-                linea = linea.replace("\"", "").trim();
+                linea = linea.trim();
                 if (linea.isBlank()) {
                     continue;
                 }
 
-                String[] p = linea.split(",");
-                if (p.length < 5) {
+                String[] p = parseCSVLine(linea);
+                if (p.length < 4) {
                     errores.add("Línea " + n + " inválida (conexiones): " + linea);
                     continue;
                 }
@@ -178,9 +219,13 @@ public class CargaArchivo {
                 try {
                     String origen = p[0].trim();
                     String destino = p[1].trim();
-                    int tiempo = Integer.parseInt(p[2].trim());
-                    int costo = Integer.parseInt(p[3].trim());
-                    boolean bidireccional = Boolean.parseBoolean(p[4].trim());
+                    double tiempoD = Double.parseDouble(p[2].trim());
+                    double costoD = Double.parseDouble(p[3].trim());
+                    int tiempo = (int) tiempoD;
+                    int costo = (int) costoD;
+                    boolean bidireccional = (p.length >= 5)
+                            ? Boolean.parseBoolean(p[4].trim())
+                            : true;
 
                     grafo.agregarConexion(origen, destino, tiempo, costo, bidireccional);
                     ok++;
@@ -193,5 +238,26 @@ public class CargaArchivo {
         }
 
         return ok;
+    }
+
+    private static String[] parseCSVLine(String linea) {
+        List<String> partes = new ArrayList<>();
+        StringBuilder campo = new StringBuilder();
+        boolean dentroComillas = false;
+
+        for (int i = 0; i < linea.length(); i++) {
+            char c = linea.charAt(i);
+
+            if (c == '"') {
+                dentroComillas = !dentroComillas;
+            } else if (c == ',' && !dentroComillas) {
+                partes.add(campo.toString());
+                campo.setLength(0);
+            } else {
+                campo.append(c);
+            }
+        }
+        partes.add(campo.toString());
+        return partes.toArray(new String[0]);
     }
 }
